--- a/styles/index.scss
+++ b/styles/index.scss
@@ -196,7 +196,7 @@ body {
           }
 
           .container_vectors {
-            display: block;
+            display: inline-block;
             height: 51px;
             width: 44.02px;
             position: relative;
@@ -216,14 +216,13 @@ body {
               position: absolute;
               height: 33px;
               top: 13px;
-              left: 22.22px;
+              left: 15.22px;
             }
             .eye2 {
               z-index: 1;
               position: absolute;
               top: 16.5px;
-              left: 41.22px;
-
+              left: 32.22px;
               width: 25px;
               height: 25px;
             }
@@ -233,7 +232,41 @@ body {
               width: 12px;
               height: 12px;
               top: 23.64px;
-              left: 46.84px;
+              left: 39.84px;
+            }
+
+            .box1 {
+              position: absolute;
+              left: 26.22px;
+              width: 37px;
+              height: 3px;
+              top: 5px;
+            }
+
+            .box2 {
+              position: absolute;
+              top: 9px;
+              left: 24.22px;
+              width: 43.15px;
+              height: 3px;
+            }
+
+            .box3 {
+              position: absolute;
+              top: 9px;
+              left: 21.22px;
+              width: 48.17px;
+              height: 3px;
+              top: 13px;
+            }
+
+            .box4 {
+              position: absolute;
+              top: 17px;
+              left: 20.22px;
+
+              width: 52px;
+              height: 36px;
             }
           }
         }
@@ -261,7 +294,7 @@ body {
           line-height: 20px;
           text-align: center;
           left: 11.15px;
-          width: 90%;
+          width: 75%;
         }
       }
     }
