--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,8 @@
 
 body {
   min-width: 320px;
+  margin: 0;
+  padding: 0;
 }
 body h1,
 body h2,
@@ -23,18 +25,7 @@ body button {
   justify-content: center;
   align-items: center;
 }
-body .circle, body main header .card_header .container_icons .green, body main header .card_header .container_icons .blue, body main header .card_header .container_icons .pink {
-  border-radius: 50%;
-  height: auto;
-  width: auto;
-  display: block;
-}
-body nav {
-  width: 375px;
-  height: 70px;
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
-}
-body nav .nav-logo {
+body .logo_Oxygen {
   width: 206px;
   height: 37px;
   font-family: "Raleway", sans-serif;
@@ -46,6 +37,17 @@ body nav .nav-logo {
   display: inline-block;
   margin-top: 17px;
   margin-left: 25px;
+}
+body .circle, body main header .card_header .container_icons .green, body main header .card_header .container_icons .blue, body main header .card_header .container_icons .pink {
+  border-radius: 50%;
+  height: auto;
+  width: auto;
+  display: block;
+}
+body nav {
+  width: 375px;
+  height: 70px;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
 }
 body nav .menu {
   width: 20px;
@@ -62,9 +64,6 @@ body nav .rectangle-menu {
 }
 body nav ul {
   display: none;
-}
-body main {
-  position: relative;
 }
 body main header {
   width: 310px;
@@ -167,7 +166,8 @@ body main header .card_header .container_icons .container_vectors {
 }
 body main header .card_header .container_icons .container_vectors .head {
   position: absolute;
-  left: 10px;
+  top: 2px;
+  left: 11px;
 }
 body main header .card_header .container_icons .container_vectors .body {
   position: absolute;
@@ -248,38 +248,18 @@ body main header .card_header .text {
   left: 11.15px;
   width: 75%;
 }
-body main footer {
-  width: 375px;
+body footer {
+  width: 100%;
   height: 89px;
-  top: 4590px;
 }
-@media only screen and (min-width: 1000px) {
-  body body {
-    max-width: 1626px;
-    height: 70px;
-  }
-  body body nav {
-    height: 70px;
-    width: 100%;
-  }
-  body body nav .nav-logo {
-    width: 206px;
-    height: 37px;
-    font-family: "Raleway", sans-serif;
-    font-size: 32px;
-    font-weight: 300;
-    line-height: 37px;
-    text-align: left;
-    color: #08a6e4;
-    background-color: aqua;
-    display: inline-block;
-    margin-top: 17px;
-    margin-left: 25px;
-  }
-  body body nav .menu {
-    display: none;
-  }
-  body body nav ul {
-    display: inline-block;
-  }
+body footer .copyright {
+  width: 187px;
+  height: 15px;
+  top: 53px;
+  left: 17px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 14.98px;
+  text-align: left;
 }/*# sourceMappingURL=index.css.map */
