--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,6 +13,8 @@ $color-quaternary: #eb476e;
 
 body {
   min-width: 320px;
+  margin: 0;
+  padding: 0;
 
   h1,
   h2,
@@ -33,33 +35,36 @@ body {
     align-items: center;
   }
 
+  .logo_Oxygen {
+    width: 206px;
+    height: 37px;
+
+    font-family: $font-primary;
+    font-size: 32px;
+    font-weight: 300;
+    line-height: 37px;
+    text-align: left;
+    color: $color-principal;
+
+    display: inline-block;
+    margin-top: 17px;
+    margin-left: 25px;
+  }
+
   .circle {
     border-radius: 50%;
     height: auto;
     width: auto;
     display: block;
   }
+  //  _____________________________________________________________________
+  //NAV_____________________________________________________________
+  //___________________________________________________________________
 
   nav {
     width: 375px;
     height: 70px;
     box-shadow: 0px 3px 6px 0px #0000004a;
-
-    .nav-logo {
-      width: 206px;
-      height: 37px;
-
-      font-family: $font-primary;
-      font-size: 32px;
-      font-weight: 300;
-      line-height: 37px;
-      text-align: left;
-      color: $color-principal;
-
-      display: inline-block;
-      margin-top: 17px;
-      margin-left: 25px;
-    }
 
     .menu {
       width: 20px;
@@ -82,11 +87,12 @@ body {
       display: none;
     }
   }
-
+  //_______________________________________________________
   //MAIN_____________________________
+  //______________________________________________________________________________
 
   main {
-    position: relative;
+    // position: relative;
 
     header {
       width: 310px;
@@ -203,7 +209,8 @@ body {
 
             .head {
               position: absolute;
-              left: 10px;
+              top: 2px;
+              left: 11px;
             }
 
             .body {
@@ -298,48 +305,65 @@ body {
         }
       }
     }
+  }
 
-    footer {
-      width: 375px;
-      height: 89px;
-      top: 4590px;
+  //_____________________________________________________________________________
+  //FOOTER_____________________________________________________________________
+  //_____________________________________________________________________________
+
+  footer {
+    width: 100%;
+    height: 89px;
+    // position: fixed;
+    // bottom: 0;
+
+    .copyright {
+      width: 187px;
+      height: 15px;
+      top: 53px;
+      left: 17px;
+      font-family: $font-secondary;
+      font-size: 11px;
+      font-weight: 400;
+      line-height: 14.98px;
+      text-align: left;
     }
   }
 
-  @media only screen and (min-width: 1000px) {
-    body {
-      max-width: 1626px;
-      height: 70px;
+  // @media only screen and (min-width: 1000px) {
+  //   body {
+  //     max-width: 1626px;
+  //     height: 70px;
 
-      nav {
-        height: 70px;
-        width: 100%;
+  //     nav {
+  //       height: 70px;
+  //       width: 100%;
 
-        .nav-logo {
-          width: 206px;
-          height: 37px;
+  //       .nav-logo {
+  //         width: 206px;
+  //         height: 37px;
 
-          font-family: $font-primary;
-          font-size: 32px;
-          font-weight: 300;
-          line-height: 37px;
-          text-align: left;
-          color: $color-principal;
+  //         font-family: $font-primary;
+  //         font-size: 32px;
+  //         font-weight: 300;
+  //         line-height: 37px;
+  //         text-align: left;
+  //         color: $color-principal;
 
-          background-color: aqua;
-          display: inline-block;
-          margin-top: 17px;
-          margin-left: 25px;
-        }
+  //         background-color: aqua;
+  //         display: inline-block;
+  //         margin-top: 17px;
+  //         margin-left: 25px;
+  //       }
 
-        .menu {
-          display: none;
-        }
+  //       .menu {
+  //         display: none;
+  //       }
 
-        ul {
-          display: inline-block;
-        }
-      }
-    }
-  }
+  //       ul {
+  //         display: inline-block;
+  //       }
+  //     }
+  //   }
+  // }
 }
