organize css in different files

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,8 +22,6 @@ body button {
   display: inline-block;
   cursor: pointer;
   color: #fff;
-  justify-content: center;
-  align-items: center;
 }
 body .logo_Oxygen {
   width: 206px;
@@ -38,215 +36,14 @@ body .logo_Oxygen {
   margin-top: 17px;
   margin-left: 25px;
 }
-body .circle, body main header .card_header .container_icons .green, body main header .card_header .container_icons .blue, body main header .card_header .container_icons .pink {
+body .circle {
   border-radius: 50%;
   height: auto;
   width: auto;
   display: block;
 }
-body nav {
-  width: 375px;
-  height: 70px;
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2901960784);
-}
-body nav .menu {
-  width: 20px;
-  height: 12px;
-  display: inline-block;
-  margin-bottom: 5px;
-  margin-left: 95px;
-}
-body nav .rectangle-menu {
-  width: 20px;
-  height: 2px;
-  display: block;
-  margin-bottom: 3px;
-}
-body nav ul {
-  display: none;
-}
-body main header {
-  width: 310px;
-  height: 213px;
-  direction: column;
-  margin: 50px auto;
-  text-align: center;
-}
-body main header h1 {
-  width: 162px;
-  height: 41px;
-  font-size: 35px;
-  font-weight: 400;
-  line-height: 41.09px;
-  text-align: center;
-  display: inline-block;
-  margin-top: 47px;
-  margin-bottom: 30px;
-}
-body main header p {
-  width: 308px;
-  height: 57px;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 23px;
-  text-align: center;
-  margin-bottom: 25px;
-}
-body main header button {
-  width: 310px;
-  height: 67px;
-  box-shadow: 5px 10px 14px 0px rgba(7, 172, 230, 0.2901960784);
-  font-size: 16px;
-  font-weight: 700;
-  margin-bottom: 45px;
-  background-color: #08a6e4;
-}
-body main header .header-img-container {
-  overflow: hidden;
-  width: 375px;
-  right: 32px;
-  height: 267px;
-  position: relative;
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-body main header .header-img-container .header-img {
-  display: block;
-  margin: 0 0 35px 0;
-  width: 375px;
-  height: 267px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-body main header h3 {
-  font-size: 30px;
-  font-weight: 300;
-  line-height: 35px;
-  text-align: center;
-  margin-bottom: 35px;
-}
-body main header .card_header {
-  display: inline-block;
-  height: 168px;
-  width: 176px;
-  position: relative;
-  justify-content: center;
-}
-body main header .card_header .container_icons {
-  display: inline-block;
-}
-body main header .card_header .container_icons .pink {
-  display: inline-block;
-  position: relative;
-  width: 62.71px;
-  height: 62.71px;
-  background-color: #eb476e;
-  padding-left: 30px;
-}
-body main header .card_header .container_icons .blue {
-  display: inline-block;
-  position: relative;
-  width: 63px;
-  height: 63px;
-  width: 61px;
-  background: #08a6e4;
-}
-body main header .card_header .container_icons .green {
-  width: 62.71px;
-  height: 62.71px;
-  left: 50.66px;
-  background: #55dfb4;
-}
-body main header .card_header .container_icons .container_vectors {
-  display: inline-block;
-  height: 51px;
-  width: 44.02px;
-  position: relative;
-}
-body main header .card_header .container_icons .container_vectors .head {
-  position: absolute;
-  top: 2px;
-  left: 11px;
-}
-body main header .card_header .container_icons .container_vectors .body {
-  position: absolute;
-  top: 29px;
-  left: 0px;
-}
-body main header .card_header .container_icons .container_vectors .eye1 {
-  position: absolute;
-  height: 33px;
-  top: 13px;
-  left: 15.22px;
-}
-body main header .card_header .container_icons .container_vectors .eye2 {
-  z-index: 1;
-  position: absolute;
-  top: 16.5px;
-  left: 32.22px;
-  width: 25px;
-  height: 25px;
-}
-body main header .card_header .container_icons .container_vectors .eye3 {
-  z-index: 2;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  top: 23.64px;
-  left: 39.84px;
-}
-body main header .card_header .container_icons .container_vectors .box1 {
-  position: absolute;
-  left: 26.22px;
-  width: 37px;
-  height: 3px;
-  top: 5px;
-}
-body main header .card_header .container_icons .container_vectors .box2 {
-  position: absolute;
-  top: 9px;
-  left: 24.22px;
-  width: 43.15px;
-  height: 3px;
-}
-body main header .card_header .container_icons .container_vectors .box3 {
-  position: absolute;
-  top: 9px;
-  left: 21.22px;
-  width: 48.17px;
-  height: 3px;
-  top: 13px;
-}
-body main header .card_header .container_icons .container_vectors .box4 {
-  position: absolute;
-  top: 17px;
-  left: 20.22px;
-  width: 52px;
-  height: 36px;
-}
-body main header .card_header p {
-  display: inline-block;
-  padding-bottom: 20px;
-}
-body main header .card_header .title {
-  width: 117px;
-  height: 24px;
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  font-weight: 800;
-  line-height: 24px;
-  letter-spacing: 5.9600000381px;
-  margin: 10px auto;
-}
-body main header .card_header .text {
-  font-family: "Raleway", sans-serif;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 20px;
-  text-align: center;
-  left: 11.15px;
-  width: 75%;
+body main {
+  margin-top: 375px;
 }
 body footer {
   width: 100%;
